--- a/client/Crypto/package.json
+++ b/client/Crypto/package.json
@@ -1,11 +1,14 @@
 {
+  "homepage": "https://nickmagidson.github.io/web3-app/",
   "name": "crypto",
   "private": true,
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "ethers": "^5.5.4",
@@ -16,6 +19,7 @@
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
     "autoprefixer": "^10.4.2",
+    "gh-pages": "^3.2.3",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.22",
     "vite": "^2.8.0"
